// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.wizard > rendering default wizard 1`] = `
.c3 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c3 > span {
  display: inline-block;
}

.c3.c3 {
  max-width: unset;
}

.c0 {
  display: flex;
  min-height: 48px;
  overflow: hidden;
}

.c0 .c8 {
  overflow: hidden;
}

.c0 .c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  align-items: center;
  background: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  color: rgb(5, 104, 174);
  display: flex;
  flex-shrink: 0;
  margin: 0px;
  min-height: inherit;
  padding: 0px 24px;
  position: relative;
}

.c1::before,
.c1::after {
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
}

.c1 + .c4 .c8 {
  border-left: 1px solid rgb(169, 179, 188);
}

.c1 .c2 {
  color: inherit;
  font-size: 1.25rem;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1:not(:disabled):focus {
  color: rgb(213, 0, 117);
  outline: none;
}

.c1:not(:disabled):focus::before {
  border: 2px solid rgb(213, 0, 117);
}

.c1:not(:disabled):focus::after {
  border: 1px dotted rgb(255, 255, 255);
}

.c1:not(:disabled):focus + .c4 .c8 {
  border-left-color: transparent;
}

.c1:disabled {
  color: rgb(169, 179, 188);
}

.c19 {
  align-items: center;
  background: rgb(241, 242, 244);
  border-width: medium medium medium 1px;
  border-style: none none none solid;
  border-color: currentcolor currentcolor currentcolor rgb(169, 179, 188);
  border-image: initial;
  color: rgb(5, 104, 174);
  display: flex;
  flex-shrink: 0;
  margin: 0px;
  min-height: inherit;
  padding: 0px 24px;
  position: relative;
}

.c19::before,
.c19::after {
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
}

.c19 .c2 {
  color: inherit;
  font-size: 1.25rem;
}

.c19:not(:disabled) {
  cursor: pointer;
}

.c19:not(:disabled):focus {
  color: rgb(213, 0, 117);
  outline: none;
  border-left-color: transparent;
}

.c19:not(:disabled):focus::before {
  border: 2px solid rgb(213, 0, 117);
}

.c19:not(:disabled):focus::after {
  border: 1px dotted rgb(255, 255, 255);
}

.c19:disabled {
  color: rgb(169, 179, 188);
}

.c10 {
  display: block;
  min-height: 48px;
  padding: 10px 0px;
  position: relative;
}

.c18 {
  display: block;
  min-height: 48px;
  padding: 10px 0px;
  position: relative;
}

.c18::after {
  content: "";
  inset: 0px;
  position: absolute;
  border-bottom: 4px solid transparent;
}

.c9 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  color: rgb(5, 104, 174);
  flex: 1 1 0%;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  margin: 0px;
  outline: none;
  padding: 0px;
  cursor: pointer;
}

.c9 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c9:focus {
  color: rgb(213, 0, 117);
  text-decoration: underline;
}

.c9:focus .c11 {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c17 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  flex: 1 1 0%;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  margin: 0px;
  outline: none;
  padding: 0px;
  background-color: rgb(5, 104, 174);
  color: rgb(255, 255, 255);
  cursor: pointer;
}

.c17 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c17.c17.c17 {
  border-left-width: medium;
  border-left-style: none;
  border-left-color: currentcolor;
}

.c21 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c12 {
  align-items: center;
  display: flex;
  justify-content: center;
  gap: 4px;
  margin: 4px 20px 4px 8px;
  padding: 0px;
}

.c14 {
  display: block;
  text-align: left;
}

.c7 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 46%, rgb(169, 179, 188) 48%, rgb(169, 179, 188) 50%, rgb(241, 242, 244) 54%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 46%, rgb(169, 179, 188) 48%, rgb(169, 179, 188) 50%, rgb(241, 242, 244) 54%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 90%, rgb(169, 179, 188) 93%, rgb(169, 179, 188) 100%);
}

.c16 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(5, 104, 174) 52%, rgb(5, 104, 174) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(5, 104, 174) 52%, rgb(5, 104, 174) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

.c5 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  display: flex;
  flex: 1 1 0%;
  margin: -1px -12px -1px 0px;
  min-height: inherit;
  min-width: 78px;
  padding: 0px;
}

.c5 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c15 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  display: flex;
  flex: 1 1 0%;
  margin: -1px -12px -1px 0px;
  min-height: inherit;
  min-width: 78px;
  padding: 0px;
}

.c15 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c15 + [data-role="wizard-navigate-button"] {
  border-color: rgb(241, 242, 244);
}

.c15 + [data-role="wizard-step"] .c6 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

.c20 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

@media (pointer: coarse) {
  .c1:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
  }

  .c1:not(:disabled):active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c1:not(:disabled):hover {
    color: rgb(213, 0, 117);
  }

  .c1:not(:disabled):hover::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c19:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
  }

  .c19:not(:disabled):active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c19:not(:disabled):hover {
    color: rgb(213, 0, 117);
  }

  .c19:not(:disabled):hover::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c9:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
    text-decoration: underline;
  }
}

@media (pointer: fine) {
  .c9:hover {
    color: rgb(213, 0, 117);
    text-decoration: underline;
  }
}

@media (pointer: coarse) {
  .c15:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c15:active .c8 {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
    text-decoration: underline;
  }

  .c15:active .c6 {
    background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
  }
}

@media (pointer: fine) {
  .c15:hover .c8 {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
    text-decoration: underline;
  }

  .c15:hover .c6 {
    background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
  }
}

<div
  class="c0 wizard wizard--truncate-text wizard--responsive"
  data-role="wizard"
  role="navigation"
  tabindex="-1"
>
  <button
    aria-label="Previous"
    class="c1 wizard__previous"
    data-role="wizard-navigate-button"
    data-type="wizard-previous"
    title="Previous"
  >
    <i
      class="c2 c3 plasma-icon"
      data-role="plasma-icon"
    >
      <span
        aria-hidden="true"
      >
        keyboard_arrow_left
      </span>
    </i>
  </button>
  <div
    class="c4 c5 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c7 wizard__tip"
    />
    <button
      class="c8 c9 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c10"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              description
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Preconditions
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c15 wizard__step wizard__step--selected"
    data-role="wizard-step"
    data-selected="true"
  >
    <div
      class="c6 c16 wizard__tip"
    />
    <button
      aria-current="step"
      class="c8 c17 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c18"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              list
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Master Conditions
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c5 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c7 wizard__tip"
    />
    <button
      class="c8 c9 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c10"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              phone_android
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Intl. Cover
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c5 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c7 wizard__tip"
    />
    <button
      class="c8 c9 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c10"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              people
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Partner
          </span>
        </span>
      </span>
    </button>
  </div>
  <button
    aria-label="Next"
    class="c19 wizard__next"
    data-role="wizard-navigate-button"
    data-type="wizard-next"
    title="Next"
  >
    <i
      class="c2 c3 plasma-icon"
      data-role="plasma-icon"
    >
      <span
        aria-hidden="true"
      >
        keyboard_arrow_right
      </span>
    </i>
  </button>
</div>
`;

exports[`com.mgmtp.a12.widgets.wizard > rendering leftout steps 1`] = `
.c4 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c4 * {
  width: 1px;
  height: 1px;
}

.c11 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c11 > span {
  display: inline-block;
}

.c11.c11 {
  max-width: unset;
}

.c14 .c5 {
  overflow: hidden;
}

.c14 .c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c15 + .c0 .c5 {
  border-left: 1px solid rgb(169, 179, 188);
}

.c15 .c10 {
  color: inherit;
  font-size: 1.25rem;
}

.c15:not(:disabled):focus + .c0 .c5 {
  border-left-color: transparent;
}

.c16 .c10 {
  color: inherit;
  font-size: 1.25rem;
}

.c7 {
  display: block;
  min-height: 48px;
  padding: 10px 0px;
  position: relative;
}

.c20 .c10 {
  font-size: 1.25rem;
  color: inherit;
}

.c20:focus .c8 {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c21 .c10 {
  font-size: 1.25rem;
  color: inherit;
}

.c6 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  color: rgb(77, 77, 77);
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  margin: 0px;
  outline: none;
  padding: 0px;
  background-color: rgb(241, 242, 244);
  flex: 0 0 auto;
}

.c6 .c10 {
  font-size: 1.25rem;
  color: inherit;
}

.c22 .c10 {
  font-size: 1.25rem;
  color: inherit;
}

.c23 .c10 {
  font-size: 1.25rem;
  color: inherit;
}

.c24 .c10 {
  font-size: 1.25rem;
  color: inherit;
}

.c25 .c10 {
  font-size: 1.25rem;
  color: inherit;
}

.c25 .c10 {
  color: inherit;
}

.c26 .c10 {
  font-size: 1.25rem;
  color: inherit;
}

.c26 .c10 {
  color: inherit;
}

.c9 {
  align-items: center;
  display: flex;
  justify-content: center;
  gap: 4px;
  margin: 4px 20px 4px 8px;
  padding: 0px;
}

.c13 {
  display: block;
  text-align: left;
}

.c3 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 46%, rgb(169, 179, 188) 48%, rgb(169, 179, 188) 50%, rgb(241, 242, 244) 54%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 46%, rgb(169, 179, 188) 48%, rgb(169, 179, 188) 50%, rgb(241, 242, 244) 54%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 90%, rgb(169, 179, 188) 93%, rgb(169, 179, 188) 100%);
}

.c17 + [data-role="wizard-step"] .c2 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c18 + [data-role="wizard-step"] .c2 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c18 + [data-role="wizard-step"] .c2 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

.c1 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  display: flex;
  margin: -1px -12px -1px 0px;
  min-height: inherit;
  padding: 0px;
  min-width: 0px;
  flex: 0 0 auto;
}

.c1 + [data-role="wizard-step"] .c2 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c19 + [data-role="wizard-step"] .c2 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c19 + [data-role="wizard-step"] .c2 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

@media (pointer: coarse) {
  .c18:active .c5 {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
    text-decoration: underline;
  }

  .c18:active .c2 {
    background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
  }
}

@media (pointer: fine) {
  .c18:hover .c5 {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
    text-decoration: underline;
  }

  .c18:hover .c2 {
    background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
  }
}

<div
  class="c0 c1 wizard__step wizard__step--non-interactive wizard__step--left-out"
  data-role="wizard-step"
>
  <div
    class="c2 c3 wizard__tip"
  />
  <span
    class="c4 -u-unseenButRead"
    data-role="hidden-text"
  >
    Further steps...
  </span>
  <button
    aria-hidden="true"
    class="c5 c6 wizard__content"
    data-role="wizard-content"
    disabled=""
    role="link"
  >
    <span
      class="c7"
      data-role="wizard-content-container-wrapper"
    >
      <span
        class="c8 c9"
        data-role="wizard-content-container"
      >
        <i
          class="c10 c11 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            more_horiz
          </span>
        </i>
        <span
          class="c12 c13 wizard__text"
        />
      </span>
    </span>
  </button>
</div>
`;

exports[`com.mgmtp.a12.widgets.wizard > rendering wizard with disabled steps 1`] = `
.c3 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c3 > span {
  display: inline-block;
}

.c3.c3 {
  max-width: unset;
}

.c0 {
  display: flex;
  min-height: 48px;
  overflow: hidden;
}

.c0 .c8 {
  overflow: hidden;
}

.c0 .c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  align-items: center;
  background: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  color: rgb(5, 104, 174);
  display: flex;
  flex-shrink: 0;
  margin: 0px;
  min-height: inherit;
  padding: 0px 24px;
  position: relative;
}

.c1::before,
.c1::after {
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
}

.c1 + .c4 .c8 {
  border-left: 1px solid rgb(169, 179, 188);
}

.c1 .c2 {
  color: inherit;
  font-size: 1.25rem;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1:not(:disabled):focus {
  color: rgb(213, 0, 117);
  outline: none;
}

.c1:not(:disabled):focus::before {
  border: 2px solid rgb(213, 0, 117);
}

.c1:not(:disabled):focus::after {
  border: 1px dotted rgb(255, 255, 255);
}

.c1:not(:disabled):focus + .c4 .c8 {
  border-left-color: transparent;
}

.c1:disabled {
  color: rgb(169, 179, 188);
}

.c19 {
  align-items: center;
  background: rgb(241, 242, 244);
  border-width: medium medium medium 1px;
  border-style: none none none solid;
  border-color: currentcolor currentcolor currentcolor rgb(169, 179, 188);
  border-image: initial;
  color: rgb(5, 104, 174);
  display: flex;
  flex-shrink: 0;
  margin: 0px;
  min-height: inherit;
  padding: 0px 24px;
  position: relative;
}

.c19::before,
.c19::after {
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
}

.c19 .c2 {
  color: inherit;
  font-size: 1.25rem;
}

.c19:not(:disabled) {
  cursor: pointer;
}

.c19:not(:disabled):focus {
  color: rgb(213, 0, 117);
  outline: none;
  border-left-color: transparent;
}

.c19:not(:disabled):focus::before {
  border: 2px solid rgb(213, 0, 117);
}

.c19:not(:disabled):focus::after {
  border: 1px dotted rgb(255, 255, 255);
}

.c19:disabled {
  color: rgb(169, 179, 188);
}

.c10 {
  display: block;
  min-height: 48px;
  padding: 10px 0px;
  position: relative;
}

.c18 {
  display: block;
  min-height: 48px;
  padding: 10px 0px;
  position: relative;
}

.c18::after {
  content: "";
  inset: 0px;
  position: absolute;
  border-bottom: 4px solid transparent;
}

.c22 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c22:focus .c11 {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c23 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c24 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c25 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c26 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c27 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c9 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  flex: 1 1 0%;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  margin: 0px;
  outline: none;
  padding: 0px;
  color: rgb(169, 179, 188);
}

.c9 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c9 .c2 {
  color: inherit;
}

.c17 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  flex: 1 1 0%;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  margin: 0px;
  outline: none;
  padding: 0px;
  background-color: rgb(5, 104, 174);
  color: rgb(169, 179, 188);
}

.c17 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c17.c17.c17 {
  border-left-width: medium;
  border-left-style: none;
  border-left-color: currentcolor;
}

.c17 .c2 {
  color: inherit;
}

.c12 {
  align-items: center;
  display: flex;
  justify-content: center;
  gap: 4px;
  margin: 4px 20px 4px 8px;
  padding: 0px;
}

.c14 {
  display: block;
  text-align: left;
}

.c7 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 46%, rgb(169, 179, 188) 48%, rgb(169, 179, 188) 50%, rgb(241, 242, 244) 54%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 46%, rgb(169, 179, 188) 48%, rgb(169, 179, 188) 50%, rgb(241, 242, 244) 54%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 90%, rgb(169, 179, 188) 93%, rgb(169, 179, 188) 100%);
}

.c16 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(5, 104, 174) 52%, rgb(5, 104, 174) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(5, 104, 174) 52%, rgb(5, 104, 174) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

.c5 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  display: flex;
  flex: 1 1 0%;
  margin: -1px -12px -1px 0px;
  min-height: inherit;
  min-width: 78px;
  padding: 0px;
}

.c5 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c15 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  display: flex;
  flex: 1 1 0%;
  margin: -1px -12px -1px 0px;
  min-height: inherit;
  min-width: 78px;
  padding: 0px;
}

.c15 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c15 + [data-role="wizard-navigate-button"] {
  border-color: rgb(241, 242, 244);
}

.c15 + [data-role="wizard-step"] .c6 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

.c20 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c21 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c21 + [data-role="wizard-step"] .c6 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

@media (pointer: coarse) {
  .c1:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
  }

  .c1:not(:disabled):active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c1:not(:disabled):hover {
    color: rgb(213, 0, 117);
  }

  .c1:not(:disabled):hover::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c19:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
  }

  .c19:not(:disabled):active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c19:not(:disabled):hover {
    color: rgb(213, 0, 117);
  }

  .c19:not(:disabled):hover::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c15:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c15:active .c8 {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
    text-decoration: underline;
  }

  .c15:active .c6 {
    background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
  }
}

@media (pointer: fine) {
  .c15:hover .c8 {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
    text-decoration: underline;
  }

  .c15:hover .c6 {
    background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
  }
}

<div
  class="c0 wizard wizard--truncate-text wizard--responsive"
  data-role="wizard"
  role="navigation"
  tabindex="-1"
>
  <button
    aria-label="Previous"
    class="c1 wizard__previous"
    data-role="wizard-navigate-button"
    data-type="wizard-previous"
    disabled=""
    title="Previous"
  >
    <i
      class="c2 c3 plasma-icon"
      data-role="plasma-icon"
    >
      <span
        aria-hidden="true"
      >
        keyboard_arrow_left
      </span>
    </i>
  </button>
  <div
    class="c4 c5 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c7 wizard__tip"
    />
    <button
      class="c8 c9 wizard__content"
      data-role="wizard-content"
      disabled=""
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c10"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              description
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Preconditions
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c15 wizard__step wizard__step--selected"
    data-role="wizard-step"
    data-selected="true"
  >
    <div
      class="c6 c16 wizard__tip"
    />
    <button
      aria-current="step"
      class="c8 c17 wizard__content"
      data-role="wizard-content"
      disabled=""
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c18"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              list
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Master Conditions
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c5 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c7 wizard__tip"
    />
    <button
      class="c8 c9 wizard__content"
      data-role="wizard-content"
      disabled=""
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c10"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              phone_android
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Intl. Cover
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c5 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c7 wizard__tip"
    />
    <button
      class="c8 c9 wizard__content"
      data-role="wizard-content"
      disabled=""
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c10"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              people
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Partner
          </span>
        </span>
      </span>
    </button>
  </div>
  <button
    aria-label="Next"
    class="c19 wizard__next"
    data-role="wizard-navigate-button"
    data-type="wizard-next"
    disabled=""
    title="Next"
  >
    <i
      class="c2 c3 plasma-icon"
      data-role="plasma-icon"
    >
      <span
        aria-hidden="true"
      >
        keyboard_arrow_right
      </span>
    </i>
  </button>
</div>
`;

exports[`com.mgmtp.a12.widgets.wizard > rendering wizard with first step selected 1`] = `
.c3 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c3 > span {
  display: inline-block;
}

.c3.c3 {
  max-width: unset;
}

.c0 {
  display: flex;
  min-height: 48px;
  overflow: hidden;
}

.c0 .c8 {
  overflow: hidden;
}

.c0 .c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  align-items: center;
  background: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  color: rgb(5, 104, 174);
  display: flex;
  flex-shrink: 0;
  margin: 0px;
  min-height: inherit;
  padding: 0px 24px;
  position: relative;
}

.c1::before,
.c1::after {
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
}

.c1 + .c4 .c8 {
  border-left: 1px solid rgb(169, 179, 188);
}

.c1 .c2 {
  color: inherit;
  font-size: 1.25rem;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1:not(:disabled):focus {
  color: rgb(213, 0, 117);
  outline: none;
}

.c1:not(:disabled):focus::before {
  border: 2px solid rgb(213, 0, 117);
}

.c1:not(:disabled):focus::after {
  border: 1px dotted rgb(255, 255, 255);
}

.c1:not(:disabled):focus + .c4 .c8 {
  border-left-color: transparent;
}

.c1:disabled {
  color: rgb(169, 179, 188);
}

.c19 {
  align-items: center;
  background: rgb(241, 242, 244);
  border-width: medium medium medium 1px;
  border-style: none none none solid;
  border-color: currentcolor currentcolor currentcolor rgb(169, 179, 188);
  border-image: initial;
  color: rgb(5, 104, 174);
  display: flex;
  flex-shrink: 0;
  margin: 0px;
  min-height: inherit;
  padding: 0px 24px;
  position: relative;
}

.c19::before,
.c19::after {
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
}

.c19 .c2 {
  color: inherit;
  font-size: 1.25rem;
}

.c19:not(:disabled) {
  cursor: pointer;
}

.c19:not(:disabled):focus {
  color: rgb(213, 0, 117);
  outline: none;
  border-left-color: transparent;
}

.c19:not(:disabled):focus::before {
  border: 2px solid rgb(213, 0, 117);
}

.c19:not(:disabled):focus::after {
  border: 1px dotted rgb(255, 255, 255);
}

.c19:disabled {
  color: rgb(169, 179, 188);
}

.c18 {
  display: block;
  min-height: 48px;
  padding: 10px 0px;
  position: relative;
}

.c10 {
  display: block;
  min-height: 48px;
  padding: 10px 0px;
  position: relative;
}

.c10::after {
  content: "";
  inset: 0px;
  position: absolute;
  border-bottom: 4px solid transparent;
}

.c17 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  color: rgb(5, 104, 174);
  flex: 1 1 0%;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  margin: 0px;
  outline: none;
  padding: 0px;
  cursor: pointer;
}

.c17 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c17:focus {
  color: rgb(213, 0, 117);
  text-decoration: underline;
}

.c17:focus .c11 {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c9 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  flex: 1 1 0%;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  margin: 0px;
  outline: none;
  padding: 0px;
  background-color: rgb(5, 104, 174);
  color: rgb(255, 255, 255);
  cursor: pointer;
}

.c9 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c9.c9.c9 {
  border-left-width: medium;
  border-left-style: none;
  border-left-color: currentcolor;
}

.c21 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c12 {
  align-items: center;
  display: flex;
  justify-content: center;
  gap: 4px;
  margin: 4px 20px 4px 8px;
  padding: 0px;
}

.c14 {
  display: block;
  text-align: left;
}

.c16 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 46%, rgb(169, 179, 188) 48%, rgb(169, 179, 188) 50%, rgb(241, 242, 244) 54%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 46%, rgb(169, 179, 188) 48%, rgb(169, 179, 188) 50%, rgb(241, 242, 244) 54%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 90%, rgb(169, 179, 188) 93%, rgb(169, 179, 188) 100%);
}

.c7 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(5, 104, 174) 52%, rgb(5, 104, 174) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(5, 104, 174) 52%, rgb(5, 104, 174) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

.c15 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  display: flex;
  flex: 1 1 0%;
  margin: -1px -12px -1px 0px;
  min-height: inherit;
  min-width: 78px;
  padding: 0px;
}

.c15 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c5 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  display: flex;
  flex: 1 1 0%;
  margin: -1px -12px -1px 0px;
  min-height: inherit;
  min-width: 78px;
  padding: 0px;
}

.c5 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c5 + [data-role="wizard-navigate-button"] {
  border-color: rgb(241, 242, 244);
}

.c5 + [data-role="wizard-step"] .c6 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

.c20 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

@media (pointer: coarse) {
  .c1:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
  }

  .c1:not(:disabled):active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c1:not(:disabled):hover {
    color: rgb(213, 0, 117);
  }

  .c1:not(:disabled):hover::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c19:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
  }

  .c19:not(:disabled):active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c19:not(:disabled):hover {
    color: rgb(213, 0, 117);
  }

  .c19:not(:disabled):hover::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c17:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
    text-decoration: underline;
  }
}

@media (pointer: fine) {
  .c17:hover {
    color: rgb(213, 0, 117);
    text-decoration: underline;
  }
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c5:active .c8 {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
    text-decoration: underline;
  }

  .c5:active .c6 {
    background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
  }
}

@media (pointer: fine) {
  .c5:hover .c8 {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
    text-decoration: underline;
  }

  .c5:hover .c6 {
    background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
  }
}

<div
  class="c0 wizard wizard--truncate-text wizard--responsive"
  data-role="wizard"
  role="navigation"
  tabindex="-1"
>
  <button
    aria-label="Previous"
    class="c1 wizard__previous"
    data-role="wizard-navigate-button"
    data-type="wizard-previous"
    title="Previous"
  >
    <i
      class="c2 c3 plasma-icon"
      data-role="plasma-icon"
    >
      <span
        aria-hidden="true"
      >
        keyboard_arrow_left
      </span>
    </i>
  </button>
  <div
    class="c4 c5 wizard__step wizard__step--selected"
    data-role="wizard-step"
    data-selected="true"
  >
    <div
      class="c6 c7 wizard__tip"
    />
    <button
      aria-current="step"
      class="c8 c9 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c10"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              description
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Preconditions
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c15 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c16 wizard__tip"
    />
    <button
      class="c8 c17 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c18"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              list
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Master Conditions
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c15 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c16 wizard__tip"
    />
    <button
      class="c8 c17 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c18"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              phone_android
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Intl. Cover
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c15 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c16 wizard__tip"
    />
    <button
      class="c8 c17 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c18"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              people
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Partner
          </span>
        </span>
      </span>
    </button>
  </div>
  <button
    aria-label="Next"
    class="c19 wizard__next"
    data-role="wizard-navigate-button"
    data-type="wizard-next"
    title="Next"
  >
    <i
      class="c2 c3 plasma-icon"
      data-role="plasma-icon"
    >
      <span
        aria-hidden="true"
      >
        keyboard_arrow_right
      </span>
    </i>
  </button>
</div>
`;

exports[`com.mgmtp.a12.widgets.wizard > rendering wizard with last step selected 1`] = `
.c3 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c3 > span {
  display: inline-block;
}

.c3.c3 {
  max-width: unset;
}

.c0 {
  display: flex;
  min-height: 48px;
  overflow: hidden;
}

.c0 .c8 {
  overflow: hidden;
}

.c0 .c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  align-items: center;
  background: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  color: rgb(5, 104, 174);
  display: flex;
  flex-shrink: 0;
  margin: 0px;
  min-height: inherit;
  padding: 0px 24px;
  position: relative;
}

.c1::before,
.c1::after {
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
}

.c1 + .c4 .c8 {
  border-left: 1px solid rgb(169, 179, 188);
}

.c1 .c2 {
  color: inherit;
  font-size: 1.25rem;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1:not(:disabled):focus {
  color: rgb(213, 0, 117);
  outline: none;
}

.c1:not(:disabled):focus::before {
  border: 2px solid rgb(213, 0, 117);
}

.c1:not(:disabled):focus::after {
  border: 1px dotted rgb(255, 255, 255);
}

.c1:not(:disabled):focus + .c4 .c8 {
  border-left-color: transparent;
}

.c1:disabled {
  color: rgb(169, 179, 188);
}

.c19 {
  align-items: center;
  background: rgb(241, 242, 244);
  border-width: medium medium medium 1px;
  border-style: none none none solid;
  border-color: currentcolor currentcolor currentcolor rgb(169, 179, 188);
  border-image: initial;
  color: rgb(5, 104, 174);
  display: flex;
  flex-shrink: 0;
  margin: 0px;
  min-height: inherit;
  padding: 0px 24px;
  position: relative;
}

.c19::before,
.c19::after {
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
}

.c19 .c2 {
  color: inherit;
  font-size: 1.25rem;
}

.c19:not(:disabled) {
  cursor: pointer;
}

.c19:not(:disabled):focus {
  color: rgb(213, 0, 117);
  outline: none;
  border-left-color: transparent;
}

.c19:not(:disabled):focus::before {
  border: 2px solid rgb(213, 0, 117);
}

.c19:not(:disabled):focus::after {
  border: 1px dotted rgb(255, 255, 255);
}

.c19:disabled {
  color: rgb(169, 179, 188);
}

.c10 {
  display: block;
  min-height: 48px;
  padding: 10px 0px;
  position: relative;
}

.c18 {
  display: block;
  min-height: 48px;
  padding: 10px 0px;
  position: relative;
}

.c18::after {
  content: "";
  inset: 0px;
  position: absolute;
  border-bottom: 4px solid transparent;
}

.c9 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  color: rgb(5, 104, 174);
  flex: 1 1 0%;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  margin: 0px;
  outline: none;
  padding: 0px;
  cursor: pointer;
}

.c9 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c9:focus {
  color: rgb(213, 0, 117);
  text-decoration: underline;
}

.c9:focus .c11 {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c17 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  flex: 1 1 0%;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  margin: 0px;
  outline: none;
  padding: 0px;
  background-color: rgb(5, 104, 174);
  color: rgb(255, 255, 255);
  cursor: pointer;
}

.c17 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c17.c17.c17 {
  border-left-width: medium;
  border-left-style: none;
  border-left-color: currentcolor;
}

.c21 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c12 {
  align-items: center;
  display: flex;
  justify-content: center;
  gap: 4px;
  margin: 4px 20px 4px 8px;
  padding: 0px;
}

.c14 {
  display: block;
  text-align: left;
}

.c7 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 46%, rgb(169, 179, 188) 48%, rgb(169, 179, 188) 50%, rgb(241, 242, 244) 54%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 46%, rgb(169, 179, 188) 48%, rgb(169, 179, 188) 50%, rgb(241, 242, 244) 54%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 90%, rgb(169, 179, 188) 93%, rgb(169, 179, 188) 100%);
}

.c16 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(5, 104, 174) 52%, rgb(5, 104, 174) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(5, 104, 174) 52%, rgb(5, 104, 174) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

.c5 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  display: flex;
  flex: 1 1 0%;
  margin: -1px -12px -1px 0px;
  min-height: inherit;
  min-width: 78px;
  padding: 0px;
}

.c5 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c15 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  display: flex;
  flex: 1 1 0%;
  margin: -1px -12px -1px 0px;
  min-height: inherit;
  min-width: 78px;
  padding: 0px;
}

.c15 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c15 + [data-role="wizard-navigate-button"] {
  border-color: rgb(241, 242, 244);
}

.c15 + [data-role="wizard-step"] .c6 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

.c20 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

@media (pointer: coarse) {
  .c1:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
  }

  .c1:not(:disabled):active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c1:not(:disabled):hover {
    color: rgb(213, 0, 117);
  }

  .c1:not(:disabled):hover::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c19:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
  }

  .c19:not(:disabled):active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c19:not(:disabled):hover {
    color: rgb(213, 0, 117);
  }

  .c19:not(:disabled):hover::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c9:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
    text-decoration: underline;
  }
}

@media (pointer: fine) {
  .c9:hover {
    color: rgb(213, 0, 117);
    text-decoration: underline;
  }
}

@media (pointer: coarse) {
  .c15:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c15:active .c8 {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
    text-decoration: underline;
  }

  .c15:active .c6 {
    background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
  }
}

@media (pointer: fine) {
  .c15:hover .c8 {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
    text-decoration: underline;
  }

  .c15:hover .c6 {
    background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
  }
}

<div
  class="c0 wizard wizard--truncate-text wizard--responsive"
  data-role="wizard"
  role="navigation"
  tabindex="-1"
>
  <button
    aria-label="Previous"
    class="c1 wizard__previous"
    data-role="wizard-navigate-button"
    data-type="wizard-previous"
    title="Previous"
  >
    <i
      class="c2 c3 plasma-icon"
      data-role="plasma-icon"
    >
      <span
        aria-hidden="true"
      >
        keyboard_arrow_left
      </span>
    </i>
  </button>
  <div
    class="c4 c5 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c7 wizard__tip"
    />
    <button
      class="c8 c9 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c10"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              description
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Preconditions
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c5 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c7 wizard__tip"
    />
    <button
      class="c8 c9 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c10"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              list
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Master Conditions
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c5 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c7 wizard__tip"
    />
    <button
      class="c8 c9 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c10"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              phone_android
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Intl. Cover
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c15 wizard__step wizard__step--selected"
    data-role="wizard-step"
    data-selected="true"
  >
    <div
      class="c6 c16 wizard__tip"
    />
    <button
      aria-current="step"
      class="c8 c17 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c18"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              people
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Partner
          </span>
        </span>
      </span>
    </button>
  </div>
  <button
    aria-label="Next"
    class="c19 wizard__next"
    data-role="wizard-navigate-button"
    data-type="wizard-next"
    title="Next"
  >
    <i
      class="c2 c3 plasma-icon"
      data-role="plasma-icon"
    >
      <span
        aria-hidden="true"
      >
        keyboard_arrow_right
      </span>
    </i>
  </button>
</div>
`;

exports[`com.mgmtp.a12.widgets.wizard > rendering wizard with non-interactive steps 1`] = `
.c11 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c11 > span {
  display: inline-block;
}

.c11.c11 {
  max-width: unset;
}

.c0 {
  display: flex;
  min-height: 48px;
  overflow: hidden;
}

.c0 .c5 {
  overflow: hidden;
}

.c0 .c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c18 + .c1 .c5 {
  border-left: 1px solid rgb(169, 179, 188);
}

.c18 .c10 {
  color: inherit;
  font-size: 1.25rem;
}

.c18:not(:disabled):focus + .c1 .c5 {
  border-left-color: transparent;
}

.c19 .c10 {
  color: inherit;
  font-size: 1.25rem;
}

.c7 {
  display: block;
  min-height: 48px;
  padding: 10px 0px;
  position: relative;
}

.c17 {
  display: block;
  min-height: 48px;
  padding: 10px 0px;
  position: relative;
}

.c17::after {
  content: "";
  inset: 0px;
  position: absolute;
  border-bottom: 4px solid transparent;
}

.c22 .c10 {
  font-size: 1.25rem;
  color: inherit;
}

.c22:focus .c8 {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c23 .c10 {
  font-size: 1.25rem;
  color: inherit;
}

.c24 .c10 {
  font-size: 1.25rem;
  color: inherit;
}

.c25 .c10 {
  font-size: 1.25rem;
  color: inherit;
}

.c6 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  color: rgb(77, 77, 77);
  flex: 1 1 0%;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  margin: 0px;
  outline: none;
  padding: 0px;
}

.c6 .c10 {
  font-size: 1.25rem;
  color: inherit;
}

.c16 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  flex: 1 1 0%;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  margin: 0px;
  outline: none;
  padding: 0px;
  background-color: rgb(5, 104, 174);
  color: rgb(255, 255, 255);
}

.c16 .c10 {
  font-size: 1.25rem;
  color: inherit;
}

.c16.c16.c16 {
  border-left-width: medium;
  border-left-style: none;
  border-left-color: currentcolor;
}

.c9 {
  align-items: center;
  display: flex;
  justify-content: center;
  gap: 4px;
  margin: 4px 20px 4px 8px;
  padding: 0px;
}

.c13 {
  display: block;
  text-align: left;
}

.c4 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 46%, rgb(169, 179, 188) 48%, rgb(169, 179, 188) 50%, rgb(241, 242, 244) 54%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 46%, rgb(169, 179, 188) 48%, rgb(169, 179, 188) 50%, rgb(241, 242, 244) 54%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 90%, rgb(169, 179, 188) 93%, rgb(169, 179, 188) 100%);
}

.c15 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(5, 104, 174) 52%, rgb(5, 104, 174) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(5, 104, 174) 52%, rgb(5, 104, 174) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

.c2 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  display: flex;
  flex: 1 1 0%;
  margin: -1px -12px -1px 0px;
  min-height: inherit;
  min-width: 78px;
  padding: 0px;
}

.c2 + [data-role="wizard-step"] .c3 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c20 + [data-role="wizard-step"] .c3 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c20 + [data-role="wizard-step"] .c3 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

.c21 + [data-role="wizard-step"] .c3 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c14 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  display: flex;
  flex: 1 1 0%;
  margin: -1px -12px -1px 0px;
  min-height: inherit;
  min-width: 78px;
  padding: 0px;
}

.c14 + [data-role="wizard-step"] .c3 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c14 + [data-role="wizard-navigate-button"] {
  border-color: rgb(241, 242, 244);
}

.c14 + [data-role="wizard-step"] .c3 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

@media (pointer: coarse) {
  .c20:active .c5 {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
    text-decoration: underline;
  }

  .c20:active .c3 {
    background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
  }
}

@media (pointer: fine) {
  .c20:hover .c5 {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
    text-decoration: underline;
  }

  .c20:hover .c3 {
    background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
  }
}

<div
  class="c0 wizard wizard--truncate-text wizard--responsive"
  data-role="wizard"
  role="navigation"
  tabindex="-1"
>
  <div
    class="c1 c2 wizard__step wizard__step--non-interactive"
    data-role="wizard-step"
  >
    <div
      class="c3 c4 wizard__tip"
    />
    <button
      class="c5 c6 wizard__content"
      data-role="wizard-content"
      disabled=""
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c7"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c8 c9"
          data-role="wizard-content-container"
        >
          <i
            class="c10 c11 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              description
            </span>
          </i>
          <span
            class="c12 c13 wizard__text"
          >
            Preconditions
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c1 c14 wizard__step wizard__step--non-interactive wizard__step--selected"
    data-role="wizard-step"
    data-selected="true"
  >
    <div
      class="c3 c15 wizard__tip"
    />
    <button
      aria-current="step"
      class="c5 c16 wizard__content"
      data-role="wizard-content"
      disabled=""
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c17"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c8 c9"
          data-role="wizard-content-container"
        >
          <i
            class="c10 c11 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              list
            </span>
          </i>
          <span
            class="c12 c13 wizard__text"
          >
            Master Conditions
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c1 c2 wizard__step wizard__step--non-interactive"
    data-role="wizard-step"
  >
    <div
      class="c3 c4 wizard__tip"
    />
    <button
      class="c5 c6 wizard__content"
      data-role="wizard-content"
      disabled=""
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c7"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c8 c9"
          data-role="wizard-content-container"
        >
          <i
            class="c10 c11 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              phone_android
            </span>
          </i>
          <span
            class="c12 c13 wizard__text"
          >
            Intl. Cover
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c1 c2 wizard__step wizard__step--non-interactive"
    data-role="wizard-step"
  >
    <div
      class="c3 c4 wizard__tip"
    />
    <button
      class="c5 c6 wizard__content"
      data-role="wizard-content"
      disabled=""
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c7"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c8 c9"
          data-role="wizard-content-container"
        >
          <i
            class="c10 c11 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              people
            </span>
          </i>
          <span
            class="c12 c13 wizard__text"
          >
            Partner
          </span>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.wizard > rendering wizard with selected finished step 1`] = `
.c20 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c20 * {
  width: 1px;
  height: 1px;
}

.c3 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c3 > span {
  display: inline-block;
}

.c3.c3 {
  max-width: unset;
}

.c19.c19 {
  color: rgb(41, 122, 36);
}

.c0 {
  display: flex;
  min-height: 48px;
  overflow: hidden;
}

.c0 .c8 {
  overflow: hidden;
}

.c0 .c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  align-items: center;
  background: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  color: rgb(5, 104, 174);
  display: flex;
  flex-shrink: 0;
  margin: 0px;
  min-height: inherit;
  padding: 0px 24px;
  position: relative;
}

.c1::before,
.c1::after {
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
}

.c1 + .c4 .c8 {
  border-left: 1px solid rgb(169, 179, 188);
}

.c1 .c2 {
  color: inherit;
  font-size: 1.25rem;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1:not(:disabled):focus {
  color: rgb(213, 0, 117);
  outline: none;
}

.c1:not(:disabled):focus::before {
  border: 2px solid rgb(213, 0, 117);
}

.c1:not(:disabled):focus::after {
  border: 1px dotted rgb(255, 255, 255);
}

.c1:not(:disabled):focus + .c4 .c8 {
  border-left-color: transparent;
}

.c1:disabled {
  color: rgb(169, 179, 188);
}

.c21 {
  align-items: center;
  background: rgb(241, 242, 244);
  border-width: medium medium medium 1px;
  border-style: none none none solid;
  border-color: currentcolor currentcolor currentcolor rgb(169, 179, 188);
  border-image: initial;
  color: rgb(5, 104, 174);
  display: flex;
  flex-shrink: 0;
  margin: 0px;
  min-height: inherit;
  padding: 0px 24px;
  position: relative;
}

.c21::before,
.c21::after {
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
}

.c21 .c2 {
  color: inherit;
  font-size: 1.25rem;
}

.c21:not(:disabled) {
  cursor: pointer;
}

.c21:not(:disabled):focus {
  color: rgb(213, 0, 117);
  outline: none;
  border-left-color: transparent;
}

.c21:not(:disabled):focus::before {
  border: 2px solid rgb(213, 0, 117);
}

.c21:not(:disabled):focus::after {
  border: 1px dotted rgb(255, 255, 255);
}

.c21:disabled {
  color: rgb(169, 179, 188);
}

.c10 {
  display: block;
  min-height: 48px;
  padding: 10px 0px;
  position: relative;
}

.c18 {
  display: block;
  min-height: 48px;
  padding: 10px 0px;
  position: relative;
}

.c18::after {
  content: "";
  inset: 0px;
  position: absolute;
  border-bottom: 4px solid transparent;
}

.c9 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  color: rgb(5, 104, 174);
  flex: 1 1 0%;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  margin: 0px;
  outline: none;
  padding: 0px;
  cursor: pointer;
}

.c9 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c9:focus {
  color: rgb(213, 0, 117);
  text-decoration: underline;
}

.c9:focus .c11 {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c23 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c24 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c17 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  flex: 1 1 0%;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  margin: 0px;
  outline: none;
  padding: 0px;
  background-color: rgb(41, 122, 36);
  color: rgb(255, 255, 255);
  cursor: pointer;
}

.c17 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c17.c17.c17 {
  border-left-width: medium;
  border-left-style: none;
  border-left-color: currentcolor;
}

.c12 {
  align-items: center;
  display: flex;
  justify-content: center;
  gap: 4px;
  margin: 4px 20px 4px 8px;
  padding: 0px;
}

.c14 {
  display: block;
  text-align: left;
}

.c7 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 46%, rgb(169, 179, 188) 48%, rgb(169, 179, 188) 50%, rgb(241, 242, 244) 54%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 46%, rgb(169, 179, 188) 48%, rgb(169, 179, 188) 50%, rgb(241, 242, 244) 54%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 90%, rgb(169, 179, 188) 93%, rgb(169, 179, 188) 100%);
}

.c16 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(41, 122, 36) 52%, rgb(41, 122, 36) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(41, 122, 36) 52%, rgb(41, 122, 36) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

.c5 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  display: flex;
  flex: 1 1 0%;
  margin: -1px -12px -1px 0px;
  min-height: inherit;
  min-width: 78px;
  padding: 0px;
}

.c5 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c15 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  display: flex;
  flex: 1 1 0%;
  margin: -1px -12px -1px 0px;
  min-height: inherit;
  min-width: 78px;
  padding: 0px;
}

.c15 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c15 + [data-role="wizard-navigate-button"] {
  border-color: rgb(241, 242, 244);
}

.c15 + [data-role="wizard-step"] .c6 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

.c22 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

@media (pointer: coarse) {
  .c1:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
  }

  .c1:not(:disabled):active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c1:not(:disabled):hover {
    color: rgb(213, 0, 117);
  }

  .c1:not(:disabled):hover::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c21:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
  }

  .c21:not(:disabled):active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c21:not(:disabled):hover {
    color: rgb(213, 0, 117);
  }

  .c21:not(:disabled):hover::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c9:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
    text-decoration: underline;
  }
}

@media (pointer: fine) {
  .c9:hover {
    color: rgb(213, 0, 117);
    text-decoration: underline;
  }
}

@media (pointer: coarse) {
  .c15:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c15:active .c8 {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
    text-decoration: underline;
  }

  .c15:active .c6 {
    background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
  }
}

@media (pointer: fine) {
  .c15:hover .c8 {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
    text-decoration: underline;
  }

  .c15:hover .c6 {
    background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
  }
}

<div
  class="c0 wizard wizard--truncate-text wizard--responsive"
  data-role="wizard"
  role="navigation"
  tabindex="-1"
>
  <button
    aria-label="Previous"
    class="c1 wizard__previous"
    data-role="wizard-navigate-button"
    data-type="wizard-previous"
    title="Previous"
  >
    <i
      class="c2 c3 plasma-icon"
      data-role="plasma-icon"
    >
      <span
        aria-hidden="true"
      >
        keyboard_arrow_left
      </span>
    </i>
  </button>
  <div
    class="c4 c5 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c7 wizard__tip"
    />
    <button
      class="c8 c9 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c10"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              description
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Preconditions
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c15 wizard__step wizard__step--selected wizard__step--finished"
    data-role="wizard-step"
    data-selected="true"
  >
    <div
      class="c6 c16 wizard__tip"
    />
    <button
      aria-current="step"
      class="c8 c17 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c18"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 c19 plasma-icon plasma-icon--success"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              check_circle
            </span>
          </i>
          <span
            class="c20 -u-unseenButRead"
            data-role="hidden-text"
          >
            Completed: 
          </span>
          <span
            class="c13 c14 wizard__text"
          >
            Master Conditions
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c5 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c7 wizard__tip"
    />
    <button
      class="c8 c9 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c10"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              phone_android
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Intl. Cover
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c5 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c7 wizard__tip"
    />
    <button
      class="c8 c9 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c10"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              people
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Partner
          </span>
        </span>
      </span>
    </button>
  </div>
  <button
    aria-label="Next"
    class="c21 wizard__next"
    data-role="wizard-navigate-button"
    data-type="wizard-next"
    title="Next"
  >
    <i
      class="c2 c3 plasma-icon"
      data-role="plasma-icon"
    >
      <span
        aria-hidden="true"
      >
        keyboard_arrow_right
      </span>
    </i>
  </button>
</div>
`;

exports[`com.mgmtp.a12.widgets.wizard > rendering wizard with selected warning step 1`] = `
.c20 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c20 * {
  width: 1px;
  height: 1px;
}

.c3 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c3 > span {
  display: inline-block;
}

.c3.c3 {
  max-width: unset;
}

.c19.c19 {
  color: rgb(175, 121, 2);
}

.c0 {
  display: flex;
  min-height: 48px;
  overflow: hidden;
}

.c0 .c8 {
  overflow: hidden;
}

.c0 .c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  align-items: center;
  background: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  color: rgb(5, 104, 174);
  display: flex;
  flex-shrink: 0;
  margin: 0px;
  min-height: inherit;
  padding: 0px 24px;
  position: relative;
}

.c1::before,
.c1::after {
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
}

.c1 + .c4 .c8 {
  border-left: 1px solid rgb(169, 179, 188);
}

.c1 .c2 {
  color: inherit;
  font-size: 1.25rem;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1:not(:disabled):focus {
  color: rgb(213, 0, 117);
  outline: none;
}

.c1:not(:disabled):focus::before {
  border: 2px solid rgb(213, 0, 117);
}

.c1:not(:disabled):focus::after {
  border: 1px dotted rgb(255, 255, 255);
}

.c1:not(:disabled):focus + .c4 .c8 {
  border-left-color: transparent;
}

.c1:disabled {
  color: rgb(169, 179, 188);
}

.c21 {
  align-items: center;
  background: rgb(241, 242, 244);
  border-width: medium medium medium 1px;
  border-style: none none none solid;
  border-color: currentcolor currentcolor currentcolor rgb(169, 179, 188);
  border-image: initial;
  color: rgb(5, 104, 174);
  display: flex;
  flex-shrink: 0;
  margin: 0px;
  min-height: inherit;
  padding: 0px 24px;
  position: relative;
}

.c21::before,
.c21::after {
  inset: 0px;
  content: "";
  display: block;
  position: absolute;
}

.c21 .c2 {
  color: inherit;
  font-size: 1.25rem;
}

.c21:not(:disabled) {
  cursor: pointer;
}

.c21:not(:disabled):focus {
  color: rgb(213, 0, 117);
  outline: none;
  border-left-color: transparent;
}

.c21:not(:disabled):focus::before {
  border: 2px solid rgb(213, 0, 117);
}

.c21:not(:disabled):focus::after {
  border: 1px dotted rgb(255, 255, 255);
}

.c21:disabled {
  color: rgb(169, 179, 188);
}

.c10 {
  display: block;
  min-height: 48px;
  padding: 10px 0px;
  position: relative;
}

.c18 {
  display: block;
  min-height: 48px;
  padding: 10px 0px;
  position: relative;
}

.c18::after {
  content: "";
  inset: 0px;
  position: absolute;
  border-bottom: 4px solid transparent;
}

.c9 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  color: rgb(5, 104, 174);
  flex: 1 1 0%;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  margin: 0px;
  outline: none;
  padding: 0px;
  cursor: pointer;
}

.c9 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c9:focus {
  color: rgb(213, 0, 117);
  text-decoration: underline;
}

.c9:focus .c11 {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c17 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  flex: 1 1 0%;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  margin: 0px;
  outline: none;
  padding: 0px;
  background-color: rgb(5, 104, 174);
  color: rgb(255, 255, 255);
  cursor: pointer;
}

.c17 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c17.c17.c17 {
  border-left-width: medium;
  border-left-style: none;
  border-left-color: currentcolor;
}

.c23 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c24 .c2 {
  font-size: 1.25rem;
  color: inherit;
}

.c12 {
  align-items: center;
  display: flex;
  justify-content: center;
  gap: 4px;
  margin: 4px 20px 4px 8px;
  padding: 0px;
}

.c14 {
  display: block;
  text-align: left;
}

.c7 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 46%, rgb(169, 179, 188) 48%, rgb(169, 179, 188) 50%, rgb(241, 242, 244) 54%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 46%, rgb(169, 179, 188) 48%, rgb(169, 179, 188) 50%, rgb(241, 242, 244) 54%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 90%, rgb(169, 179, 188) 93%, rgb(169, 179, 188) 100%);
}

.c16 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(5, 104, 174) 52%, rgb(5, 104, 174) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(5, 104, 174) 52%, rgb(5, 104, 174) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

.c5 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  display: flex;
  flex: 1 1 0%;
  margin: -1px -12px -1px 0px;
  min-height: inherit;
  min-width: 78px;
  padding: 0px;
}

.c5 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c15 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  display: flex;
  flex: 1 1 0%;
  margin: -1px -12px -1px 0px;
  min-height: inherit;
  min-width: 78px;
  padding: 0px;
}

.c15 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

.c15 + [data-role="wizard-navigate-button"] {
  border-color: rgb(241, 242, 244);
}

.c15 + [data-role="wizard-step"] .c6 {
  background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(241, 242, 244) 52%, rgb(241, 242, 244) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
}

.c22 + [data-role="wizard-step"] .c6 {
  background-position: 0px 0px, 100% 100%, 0px 0px;
  background-size: 100% 50%, 100% 50%, 100% 100%;
  background-repeat: no-repeat;
  min-width: 12px;
  width: 12px;
}

@media (pointer: coarse) {
  .c1:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
  }

  .c1:not(:disabled):active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c1:not(:disabled):hover {
    color: rgb(213, 0, 117);
  }

  .c1:not(:disabled):hover::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c21:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
  }

  .c21:not(:disabled):active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c21:not(:disabled):hover {
    color: rgb(213, 0, 117);
  }

  .c21:not(:disabled):hover::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c9:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(181, 76, 23);
    text-decoration: underline;
  }
}

@media (pointer: fine) {
  .c9:hover {
    color: rgb(213, 0, 117);
    text-decoration: underline;
  }
}

@media (pointer: coarse) {
  .c15:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c15:active .c8 {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
    text-decoration: underline;
  }

  .c15:active .c6 {
    background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
  }
}

@media (pointer: fine) {
  .c15:hover .c8 {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
    text-decoration: underline;
  }

  .c15:hover .c6 {
    background-image: linear-gradient(to right top, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right bottom, transparent 0px, transparent 48%, rgb(213, 0, 117) 52%, rgb(213, 0, 117) 100%), linear-gradient(to right, transparent 0px, transparent 100%);
  }
}

<div
  class="c0 wizard wizard--truncate-text wizard--responsive"
  data-role="wizard"
  role="navigation"
  tabindex="-1"
>
  <button
    aria-label="Previous"
    class="c1 wizard__previous"
    data-role="wizard-navigate-button"
    data-type="wizard-previous"
    title="Previous"
  >
    <i
      class="c2 c3 plasma-icon"
      data-role="plasma-icon"
    >
      <span
        aria-hidden="true"
      >
        keyboard_arrow_left
      </span>
    </i>
  </button>
  <div
    class="c4 c5 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c7 wizard__tip"
    />
    <button
      class="c8 c9 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c10"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              description
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Preconditions
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c15 wizard__step wizard__step--selected wizard__step--warning"
    data-role="wizard-step"
    data-selected="true"
  >
    <div
      class="c6 c16 wizard__tip"
    />
    <button
      aria-current="step"
      class="c8 c17 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c18"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 c19 plasma-icon plasma-icon--warning"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              warning
            </span>
          </i>
          <span
            class="c20 -u-unseenButRead"
            data-role="hidden-text"
          >
            Warning: 
          </span>
          <span
            class="c13 c14 wizard__text"
          >
            Master Conditions
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c5 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c7 wizard__tip"
    />
    <button
      class="c8 c9 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c10"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              phone_android
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Intl. Cover
          </span>
        </span>
      </span>
    </button>
  </div>
  <div
    class="c4 c5 wizard__step"
    data-role="wizard-step"
  >
    <div
      class="c6 c7 wizard__tip"
    />
    <button
      class="c8 c9 wizard__content"
      data-role="wizard-content"
      role="link"
      style="white-space: nowrap;"
    >
      <span
        class="c10"
        data-role="wizard-content-container-wrapper"
      >
        <span
          class="c11 c12"
          data-role="wizard-content-container"
        >
          <i
            class="c2 c3 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              people
            </span>
          </i>
          <span
            class="c13 c14 wizard__text"
          >
            Partner
          </span>
        </span>
      </span>
    </button>
  </div>
  <button
    aria-label="Next"
    class="c21 wizard__next"
    data-role="wizard-navigate-button"
    data-type="wizard-next"
    title="Next"
  >
    <i
      class="c2 c3 plasma-icon"
      data-role="plasma-icon"
    >
      <span
        aria-hidden="true"
      >
        keyboard_arrow_right
      </span>
    </i>
  </button>
</div>
`;
